samples/_failures_safe/1761128806_8d943f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ac1b1d4.c: In function ‘main’:
./samples/SAFE/__tmp_8ac1b1d4.c:156:5: error: expected declaration or statement at end of input
  156 |     return 0;
      |     ^~~~~~
